# tmuxbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  PRODUCTIZATION.md  README.md  RELEASE.md  RESEARCH.md  SECURITY.md  SUPPORT.md  VERSIONING.md  bindings.example.yaml  pyproject.toml  tmuxbot.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/systemd/: tmuxbot-bridge-refresh@.service  tmuxbot-bridge-refresh@.timer  tmuxbot-codex-rotation.service  tmuxbot-codex-rotation.timer  tmuxbot-web.service  tmuxbot.service
docs/: worker-protocol-v1.md
docs/research/: 2026-07-11-multi-llm-coordination-landscape-zh.md  2026-07-11-multi-llm-coordination-landscape.md  2026-07-11-webui-multi-agent-open-source-landscape-zh.md  2026-07-11-webui-multi-agent-open-source-landscape.md  2026-07-13-webui-control-console-patterns.md  2026-07-17-feishu-task-v2-integration.md  2026-07-17-tmux-multi-cli-next-steps.md
tests/: test_addressing.py  test_attachments.py  test_bridge_supervisor.py  test_channel_health.py  test_channel_reply_contract.py  test_claude_code_backend.py  test_claude_hooks.py  test_codex_backend.py  test_command_adapter.py  test_config_loading.py  test_control_panel.py  test_core_contracts.py  test_dispatch.py  test_doctor.py  test_feishu_actions.py  test_feishu_cards.py  test_feishu_mentions.py  test_feishu_panel.py  test_feishu_replies.py  test_feishu_streaming.py  test_feishu_ws_lifecycle.py  test_incoming_message_contract.py  test_install_service.py  test_jsonl.py  test_lifecycle.py  test_outbound_attachments.py  test_paths.py  test_project_metadata.py  test_provider_contract.py  test_provider_discovery.py  test_provider_events.py  test_restart_script.py  test_rich_messages.py  test_runtime_v2.py  test_send_pre_attachments.py  test_serve.py  test_session_identity.py  test_telegram_membership.py  test_telegram_mentions.py  test_telegram_panel.py  (+5 more)
tests/control_plane/: test_models.py  test_repository.py  test_tmux_inventory.py
tests/e2e/: test_teamrun_recovery.py  test_tmux_provider_channel_matrix.py
tests/providers/: test_adapters.py
tests/teamrun/: test_channel_projection.py  test_domain.py  test_projection.py  test_protocol.py  test_scheduler.py  test_teamrun_repository.py  test_tmux_sender.py  test_worker.py  test_worktree.py
tests/web/: test_auth_service.py  test_channel_config_api.py  test_project_session_api.py  test_provider_api.py  test_setup_grant.py  test_static_app.py  test_teamrun_api.py  test_terminal.py  test_terminal_api.py  test_web_app.py  (+2 more)
tmuxbot/: __init__.py  __main__.py  addressing.py  attachments.py  channel_health.py  command_adapter.py  commands.py  config.py  control_panel.py  dispatch.py  doctor.py  heartbeat.py  idle.py  jsonl.py  lifecycle.py  paths.py  picker.py  provision.py  quota.py  replies.py  serve.py  service_install.py  state.py  supervisor.py  tmux.py  utils.py  validation.py
webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+136 files in other folders)
