[project]
name = "tmuxbot"
version = "0.1.0"
description = "Telegram/Feishu <-> tmux AI CLI TUI bridge"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.13",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
feishu = [
    "lark-oapi>=1.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F"]

[project.authors]
name = "ztllll"
email = "33171642+ztllll@users.noreply.github.com"
